# heart_disease_classification

./: README.md  data_handling.ipynb  data_inspecting.ipynb  demo.ipynb  final.ipynb  process.py  pyproject.toml  tmp.py  tmp.sqlite  tmp_best_params.pkl  train.py
metrics/: adaboost_leak_metrics.csv  auto-ft-tabfpn.csv  catboost_leak_metrics.csv  ft-tabfpn.csv  gaussian_nb_leak_metrics.csv  knn_leak_metrics.csv  lda_leak_metrics.csv  lightgbm_leak_metrics.csv  linear_svm_leak_metrics.csv  mlp_leak_metrics.csv  qda_leak_metrics.csv  random_forest_leak_metrics.csv  ridge_leak_metrics.csv  stacking_metrics.csv  svm_leak_metrics.csv  tabfn_leak_metrics.csv  xgboost_leak_metrics.csv
metrics_og/: decision_tree_leak_metrics.csv  gaussian_nb_leak_metrics.csv  knn_leak_metrics.csv  logistic_regression_leak_metrics.csv  random_forest_leak_metrics.csv  xgboost_leak_metrics.csv
metrics_og_2/: decision_tree_leak_metrics.csv  gaussian_nb_leak_metrics.csv  knn_leak_metrics.csv  logistic_regression_leak_metrics.csv  random_forest_leak_metrics.csv  xgboost_leak_metrics.csv
models/: best_adaboost_leak_model.joblib  best_adaboost_leak_params.joblib  best_catboost_leak_model.joblib  best_catboost_leak_params.joblib  best_gaussian_nb_leak_model.joblib  best_gaussian_nb_leak_params.joblib  best_knn_leak_model.joblib  best_knn_leak_params.joblib  best_lda_leak_model.joblib  best_lda_leak_params.joblib  best_lightgbm_leak_model.joblib  best_lightgbm_leak_params.joblib  best_linear_svm_leak_model.joblib  best_linear_svm_leak_params.joblib  best_logistic_regression_leak_model.joblib  (+14 more)
(+23 files in other folders)
